<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Adam Speakman
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:seekbar="http://schemas.android.com/apk/res/speakman.whatsshakingnz">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_allowBackgroundNotifications"
        android:title="@string/preferences_notifications_title"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_backgroundNotificationsSound"
        android:title="@string/preferences_notifications_sound_title"
        android:dependency="pref_allowBackgroundNotifications"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_backgroundNotificationsVibrate"
        android:title="@string/preferences_notifications_vibrate_title"
        android:dependency="pref_allowBackgroundNotifications"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_backgroundNotificationsLED"
        android:title="@string/preferences_notifications_summary_light_title"
        android:dependency="pref_allowBackgroundNotifications"/>

    <speakman.whatsshakingnz.ui.preference.SeekBarPreference
        android:key="pref_minHighlightMagnitude"
        seekbar:seekBarMin="30"
        android:defaultValue="40"
        android:max="50"
        android:title="@string/preferences_notifications_minimum_magnitude"
        android:dependency="pref_allowBackgroundNotifications"
        seekbar:seekBarUseDecimal="true"/>

    <speakman.whatsshakingnz.ui.preference.SeekBarPreference
        android:key="pref_minDisplayMagnitude"
        seekbar:seekBarMin="0"
        android:defaultValue="0"
        android:max="40"
        android:title="@string/preferences_display_minimum_magnitude"
        seekbar:seekBarUseDecimal="true"/>

</PreferenceScreen>