<!--
  ~ Copyright 2015 Adam Speakman
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item android:id="@+id/menu_action_settings"
          android:title="@string/menu_action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_action_licences"
        android:title="@string/menu_action_licenses"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_action_show_single_notif"
          android:title="@string/menu_action_debug_notification_single"
          android:orderInCategory="100"
          android:visible="@bool/debug_features_enabled"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_action_show_multi_notif"
          android:title="@string/menu_action_debug_notification_multi"
          android:orderInCategory="100"
          android:visible="@bool/debug_features_enabled"
          app:showAsAction="never"/>
    <item android:id="@+id/menu_action_trigger_exception"
          android:title="@string/menu_action_debug_trigger_exception"
          android:orderInCategory="100"
          android:visible="@bool/debug_features_enabled"
          app:showAsAction="never"/>
</menu>
